k8s/uporabniki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: novice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: novice
  template:
    metadata:
      labels:
        app: novice
    spec:
      containers:
        - image: rso2021jklk/novice:2021-11-21-23-02-18
          name: novice
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: novice
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: novice
