k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: polnilnice-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /uporabniki(/|$)(.*)
            backend:
              serviceName: uporabniki
              servicePort: 8080
          - path: /polnilnice(/|$)(.*)
            backend:
              serviceName: polnilnice
              servicePort: 8080
          - path: /novice(/|$)(.*)
            backend:
              serviceName: novice
              servicePort: 8080
